--- a/events.qmd
+++ b/events.qmd
@@ -2,7 +2,9 @@
 title: "События"
 ---
 
-### Пятница с ЦЦИ: уголь (25 октября 2024)
+### Пятница с ЦЦИ: уголь 
+
+25 октября 2024
 
 -   Состояние мировой экономики и меры экономической поддержки Китая
 -   Экспортные рынки углей и цены на уголь
@@ -10,8 +12,9 @@ title: "События"
 
 [Материалы вебинара](events/2024-10-25-coal.qmd)
 
+### Пятница с ЦЦИ: корабли с черным золотом 
 
-### Пятница с ЦЦИ: корабли с черным золотом (13 сентября 2024)
+13 сентября 2024
 
 -   Особенности морского путешествия российской нефти
 -   Сколько стоит круиз от Балтики до Китая?
@@ -19,7 +22,9 @@ title: "События"
 
 [Материалы вебинара](events/2024-09-13-crude.qmd)
 
-### Пятница с ЦЦИ: хлеб с маслом (13 сентября 2024)
+### Пятница с ЦЦИ: хлеб с маслом
+
+13 сентября 2024
 
 -   Прогнозы урожая и экспорта зерна в 2024/25 г.
 -   Куда плывут российские подсолнечное масло и пшеница
@@ -28,7 +33,9 @@ title: "События"
 
 [Материалы вебинара](events/2024-09-13-wheat.qmd)
 
-### Пятница с ЦЦИ: уголь (31 мая 2024)
+### Пятница с ЦЦИ: уголь
+
+31 мая 2024
 
 [Материалы вебинара](events/2024-05-31-coal.qmd)
 
