--- a/index.qmd
+++ b/index.qmd
@@ -34,7 +34,6 @@ format:
 21 октября 2024. **На Cbonds стартует размещение аналитики Центра ценовых индексов**
 
 [Пресс-релиз →](events/2024-10-21-cbonds.qmd)
-
 :::
 
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
@@ -43,6 +42,18 @@ format:
 
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
 ### Новости рынков
+
+**27.01.2025 Пшеница**
+
+Экспортные цены на пшеницу снизились на 1 долл. по сравнению с прошлой неделей. Аргентина до конца июня 2025 г. снизила экспортные пошлины на зерновые с 12% до 9,5% для поддержки аграриев. Экспорт пшеницы из Австралии в 2024/25 г. может вырасти на 21% до 24 млн т по прогнозам USDA.
+
+[Подробнее →](markets/markets-wheat.qmd)
+
+**20.01.2025 Уголь**
+
+За неделю до наступления Нового года по лунному календарю в Китае начали чуть более активно закупать уголь. Однако это не сильно отразилось на его цене.
+
+[Подробнее →](markets/markets-coal.qmd)
 
 **20.01.2025 Минеральные удобрения**
 
@@ -56,15 +67,9 @@ format:
 
 [Подробнее →](markets/markets-railways.qmd)
 
-**13.01.2025 Пшеница**
-
-Экспортные цены на пшеницу выросли на 4 долл. по сравнению с концом декабря 2024 г. Казахстан не продлил запрет на импорт пшеницы из третьих стран и ЕАЭС, с 1 января 2025 г. российская пшеница может поступать на казахстанский рынок без ограничений. С 1 января 2025 г. введены 5% таможенные пошлины на вывоз из России за пределы ЕАЭС гороха, нута и чечевицы.
-
-[Подробнее →](markets/markets-wheat.qmd)
-
 **01.01.2025 Подсолнечное масло**
 
-Экспортные цены на подсолнечное масло за месяц упали на 85 долл. Экспортная пошлина на подсолнечное масло в РФ на январь 2025 г. выросла в 1,7 раз по сравнению с декабрем 2024 г. до 16 тыс. руб. По предварительным данным Росстата валовой сбор подсолнечника в РФ в 2024 г. составил 16,6 млн т, выше ноябрьского прогноза аналитиков. 
+Экспортные цены на подсолнечное масло за месяц упали на 85 долл. Экспортная пошлина на подсолнечное масло в РФ на январь 2025 г. выросла в 1,7 раз по сравнению с декабрем 2024 г. до 16 тыс. руб. По предварительным данным Росстата валовой сбор подсолнечника в РФ в 2024 г. составил 16,6 млн т, выше ноябрьского прогноза аналитиков.
 
 [Подробнее →](markets/markets-oilseed.qmd)
 
@@ -74,10 +79,9 @@ format:
 
 [Подробнее →](markets/markets-railways-van.qmd)
 
-
 **25.12.2024 Перевозки нефтепродуктов**
 
-Шторм на Черном море вызвал рост ставок  на наиболее востребованных маршрутах в Турцию и Средиземное море. Отмена эмбарго на поставки высокооктанового бензина не привела к росту его морского экспорта.
+Шторм на Черном море вызвал рост ставок на наиболее востребованных маршрутах в Турцию и Средиземное море. Отмена эмбарго на поставки высокооктанового бензина не привела к росту его морского экспорта.
 
 [Подробнее →](markets/markets-sea-freight.qmd)
 
@@ -87,20 +91,11 @@ format:
 
 [Подробнее →](markets/markets-sea-freight.qmd)
 
-
-**20.12.2024 Уголь**
-
-Несмотря на снижение температуры воздуха, цены на уголь продолжают снижаться. Китай продолжает увеличивать объёмы собственной добычи угля, а также активно заполняет склады в портах и на электростанциях. Индекс ЦЦИ на уголь калорийностью 5500 ккал/кг на базисе FOB Дальний Восток снизился за неделю на 4,8%.
-   
-[Подробнее →](markets/markets-coal.qmd)
-
-
 **18.12.2024 Нефть**
 
 По итогам предыдущей недели стоимость российской нефти варьировалась в зависимости от сорта и базиса поставки. Дельта изменения находится в пределах от -1% до +1%. Дисконт на ESPO FOB Kozmino сузился более чем на 10% на фоне роста спроса в Китае. Морской экспорт российской нефти за отчетную неделю увеличился более чем на 7% н/н.
 
 [Подробнее →](markets/markets-oil.qmd)
-
 :::
 
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
