--- a/markets/markets-coal.qmd
+++ b/markets/markets-coal.qmd
@@ -17,14 +17,40 @@ format:
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
 ### Котировки
 
+*20.01.2024* Уголь
+
+**Предпраздничный спрос на уголь в КНР не поддержал цены**
+
+За неделю до наступления Нового года по лунному календарю в Китае начали чуть более активно закупать уголь. Однако это не сильно отразилось на его цене.
+
+-   Рассматриваемый уровень цен на пылеугольное топливо (PCI LV): 130-135 долл./т CFR China.
+-   Рассматриваемый уровень цен на коксующийся уголь марки ГЖ: 130 долл./т CFR China.
+
+![](../images/icon-locker.svg){width="6%"}
+
+[Подробнее](../demo-subscription.qmd)
+
+*13.01.2024* Уголь
+
+**Новый год по старому сценарию**
+
+Накопленные запасы угля и относительно теплая зима поддерживают тенденцию снижения цен в наступившем 2025 г. За 2 недели до начала празднования Нового года по лунному календарю в КНР стоимость энергетического угля опустилась ниже 90 долл./т на базисе FOB Дальний Восток.
+
+-   Рассматриваемый уровень цен на пылеугольное топливо (PCI LV): 132-135 долл./т CFR China.
+-   Рассматриваемый уровень цен на коксующийся уголь марки ГЖ: 130 долл./т CFR China.
+
+![](../images/icon-locker.svg){width="6%"}
+
+[Подробнее](../demo-subscription.qmd)
+
 *20.12.2024* Уголь
 
 **Похолодание в Китае не поддержало цены на уголь**
 
 Несмотря на снижение температуры воздуха, цены на уголь продолжают снижаться. Китай продолжает увеличивать объёмы собственной добычи угля, а также активно заполняет склады в портах и на электростанциях. Индекс ЦЦИ на уголь калорийностью 5500 ккал/кг на базисе FOB Дальний Восток снизился за неделю на 4,8%.
 
-- Рассматриваемый уровень цен на пылеугольное топливо (PCI LV): 156 долл./т CFR Indonesia.
-- Рассматриваемый уровень цен на коксующийся уголь марки ГЖ: 128-132 долл./т CFR China.   
+-   Рассматриваемый уровень цен на пылеугольное топливо (PCI LV): 156 долл./т CFR Indonesia.
+-   Рассматриваемый уровень цен на коксующийся уголь марки ГЖ: 128-132 долл./т CFR China.
 
 ![](../images/icon-locker.svg){width="6%"}
 
@@ -36,23 +62,12 @@ format:
 
 Цены на энергетический уголь продолжают снижаться. Тёплая зима и рост внутренней добычи в Китае негативно влияют на экспортные цены. В декабре запасы в северных портах КНР остаются на высшем уровне по сравнению с аналогичным периодом последних 5-ти лет. Индекс ЦЦИ на уголь калорийностью 5500 ккал/кг на базисе FOB Дальний Восток снизился за неделю на 3,5%.
 
-- Рассматриваемый уровень цен на пылеугольное топливо (PCI LV): 133-142 долл./т CFR China.
-- Рассматриваемый уровень цен на коксующийся уголь марки ГЖ: 135-138 долл./т CFR China.   
+-   Рассматриваемый уровень цен на пылеугольное топливо (PCI LV): 133-142 долл./т CFR China.
+-   Рассматриваемый уровень цен на коксующийся уголь марки ГЖ: 135-138 долл./т CFR China.
 
 ![](../images/icon-locker.svg){width="6%"}
 
 [Подробнее](../demo-subscription.qmd)
-
-*09.12.2024* Уголь
-
-**Сезонные факторы пока не оправдывают надежд**
-
-Цены на энергетический уголь начали активнее спускаться вниз, высокие запасы на складах и в портах Китая, тёплая зима и большой рынок предложения поддерживают давление на цены.   
-
-- Рассматриваемый уровень цен на пылеугольное топливо (PCI LV): 145-146 долл./т CFR South China, 142-143 долл./т CFR North China, 156-160 долл./т CFR Indonesia.
-- Рассматриваемый уровень цен на коксующийся уголь: ГЖ – 135 долл./т CFR China.   
-
-![](../images/icon-locker.svg){width="6%"}
 
 ### События
 
@@ -80,7 +95,7 @@ hc = highchart() %>%
    hc_xAxis(type = 'datetime') %>% 
    hc_yAxis(title  = list(text = 'руб./т')) %>% 
    hc_exporting(enabled = FALSE) %>% 
-   hc_tooltip(enabled  = FALSE)
+   hc_tooltip(enabled  = TRUE)
 # поменять названия месяцев на русские. по умолчанию - на английском
 hc$x$conf_opts$lang$months = c("Январь"	,"Февраль",	"Март"	,"Апрель"	,"Май",	"Июнь", "Июль",	"Август",	"Сентябрь",	"Октябрь",	"Ноябрь",	"Декабрь")
 hc$x$conf_opts$lang$shortMonths = c("Янв", 	"Фев",	"Мар",	"Апр",	"Май",	"Июн",	"Июл",	"Авг",	"Сен",	"Окт",	"Ноя",	"Дек")
