--- a/markets/markets-oilseed.qmd
+++ b/markets/markets-oilseed.qmd
@@ -9,7 +9,7 @@ format:
        body-width: 900px
 ---
 
-# ![](../images/icon-oilseed.svg) Рынок масла {.my-custom-class style="margin-left:3%;"}
+# ![](../images/icon-oilseed.svg) Подсолнечное масло {.my-custom-class style="margin-left:3%;"}
 
 ![](../images/icon-subscription.svg)[Демоподписка](../demo-subscription.qmd)
 
@@ -21,14 +21,13 @@ format:
 
 **Цены на масло скользят вниз, пошлина взлетает вверх**
 
-Экспортные цены на подсолнечное масло за месяц упали на 85 долл. 
+Экспортные цены на подсолнечное масло за месяц упали на 85 долл.
 
 Экспортная пошлина на подсолнечное масло в РФ на январь 2025 г. выросла в 1,7 раз по сравнению с декабрем 2024 г. до 16 тыс. руб.
 
-По предварительным данным Росстата валовой сбор подсолнечника в РФ в 2024 г. составил 16,6 млн т, выше ноябрьского прогноза аналитиков. 
+По предварительным данным Росстата валовой сбор подсолнечника в РФ в 2024 г. составил 16,6 млн т, выше ноябрьского прогноза аналитиков.
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
-
 
 *02.12.2024 Подсолнечное масло*
 
@@ -74,7 +73,7 @@ hc = highchart() %>%
    hc_xAxis(type = 'datetime') %>% 
    hc_yAxis(title  = list(text = 'долл./т')) %>%
    hc_exporting(enabled = FALSE) %>%
-   hc_tooltip(enabled  = FALSE)
+   hc_tooltip(enabled  = TRUE)
 
 # поменять названия месяцев на русские. по умолчанию - на английском
 hc$x$conf_opts$lang$months = c("Январь"	,"Февраль",	"Март"	,"Апрель"	,"Май",	"Июнь", "Июль",	"Август",	"Сентябрь",	"Октябрь",	"Ноябрь",	"Декабрь")
