--- a/markets/markets-wheat.qmd
+++ b/markets/markets-wheat.qmd
@@ -9,7 +9,7 @@ format:
        body-width: 900px
 ---
 
-# ![](../images/icon-wheat.svg) Рынок зерна {.my-custom-class style="margin-left:3%;"}
+# ![](../images/icon-wheat.svg) Зерно {.my-custom-class style="margin-left:3%;"}
 
 ![](../images/icon-subscription.svg)[Демоподписка](../demo-subscription.qmd)
 
@@ -17,13 +17,38 @@ format:
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
 ### Котировки
 
+
+*27.01.2025 Пшеница*
+
+**Экспорт зерна для аргентинских аграриев стал выгоднее**
+
+Экспортные цены на пшеницу снизились на 1 долл. по сравнению с прошлой неделей. 
+
+Аргентина до конца июня 2025 г. снизила экспортные пошлины на зерновые с 12% до 9,5% для поддержки аграриев. 
+
+Экспорт пшеницы из Австралии в 2024/25 г. может вырасти на 21% до 24 млн т по прогнозам USDA.
+
+![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
+
+*20.01.2025 Пшеница*
+
+**Европа прирастет пшеницей в следующем сезоне**
+
+Экспортные цены на пшеницу остались на уровне прошлой недели.
+
+Strategie Grains повысило прогноз урожая мягкой пшеницы в ЕС в 2025/26 г. на 600 тыс. т до 127,2 млн т.
+
+Conab снизило оценку производства пшеницы в Бразилии в 2024 г. на 2% до 7,9 млн т.
+
+![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
+
 *13.01.2025 Пшеница*
 
 **Казахстан открылся для российской пшеницы**
 
-Экспортные цены на пшеницу выросли на 4 долл. по сравнению с концом декабря 2024 г. 
+Экспортные цены на пшеницу выросли на 4 долл. по сравнению с концом декабря 2024 г.
 
-Казахстан не продлил запрет на импорт пшеницы из третьих стран и ЕАЭС, с 1 января 2025 г. российская пшеница может поступать на казахстанский рынок без ограничений. 
+Казахстан не продлил запрет на импорт пшеницы из третьих стран и ЕАЭС, с 1 января 2025 г. российская пшеница может поступать на казахстанский рынок без ограничений.
 
 С 1 января 2025 г. введены 5% таможенные пошлины на вывоз из России за пределы ЕАЭС гороха, нута и чечевицы.
 
@@ -33,7 +58,7 @@ format:
 
 **Французский экспорт пшеницы упадет до минимума с начала века**
 
-Экспортные цены на пшеницу выросли на 4 долл. по сравнению с прошлой неделей. 
+Экспортные цены на пшеницу выросли на 4 долл. по сравнению с прошлой неделей.
 
 Правительство РФ утвердило квоту на экспорт пшеницы в 2025 г. в размере 10,6 млн т, на 400 тыс. т ниже ранее одобренного таможенной подкомиссией объема.
 
@@ -53,30 +78,6 @@ format:
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
 
-*09.12.2024 Пшеница*
-
-**Mostakbal Misr заменит GASC в закупках пшеницы**
-
-Экспортные цены на пшеницу выросли на 1 долл. по сравнению с прошлой неделей.
-
-Reuters пишет, что Египет передает полномочия по импорту продовольствия, ранее принадлежавшие GASC, агентству Mostakbal Misr.
-
-Экспортная пошлина на пшеницу в РФ, которая будет действовать с 11 декабря 2024 г., вырастет на 32% до 4 872 руб. из-за ослабления рубля.
-
-![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
-
-*25.11.2024 Пшеница*
-
-**Зимбабве собирает рекордный урожай пшеницы, Иордания – импортирует про запас**
-
-Экспортные цены на пшеницу остались на уровне прошлой недели.
-
-Зимбабве может собрать в 2024 г. рекордный урожай пшеницы – 550 тыс. т.
-
-Иордания в 2024/25 г. может нарастить импорт пшеницы на 5% до 1,2 млн т.
-
-![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
-
 :::
 
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
@@ -91,6 +92,7 @@ library(tidyr)
 df <- read.xlsx(xlsxFile = '../xls/график_пшеница.xlsx', sheet = 1) 
 names(df) = c('date', 'value')
 df$date <- as.Date(df$date, '%d.%m.%Y')
+df$value <- round(df$value,1)
 #df$date <- as.Date(df$date, origin = "1899-12-30")
 
 hc = highchart() %>%
@@ -99,7 +101,7 @@ hc = highchart() %>%
    hc_xAxis(type = 'datetime') %>%
    hc_yAxis(title  = list(text = 'руб./т')) %>%
    hc_exporting(enabled = FALSE) %>%
-   hc_tooltip(enabled  = FALSE)
+   hc_tooltip(enabled  = TRUE)
 
 # поменять названия месяцев на русские. по умолчанию - на английском
 hc$x$conf_opts$lang$months = c("Январь"	,"Февраль",	"Март"	,"Апрель"	,"Май",	"Июнь", "Июль",	"Август",	"Сентябрь",	"Октябрь",	"Ноябрь",	"Декабрь")
