--- a/methodology/specs-fertilizers.qmd
+++ b/methodology/specs-fertilizers.qmd
@@ -12,17 +12,21 @@ fig-format: svg
 
 Продукт и его характеристики
 
-+------------------+------------+------------+-----------------+-----------------+
-| Наименование     | Марка      | Состав     | Форма выпуска   | Транспортировка |
-+==================+============+============+=================+=================+
-| Prilled urea     | Б          | 46% азота  | приллированный  | навалом         |
-+------------------+------------+------------+-----------------+-----------------+
-| Granular urea    | Б          | 46% азота  | гранулированный | навалом         |
-+------------------+------------+------------+-----------------+-----------------+
-| Ammonium nitrate | Б          | 34% азота  | гранулированная | навалом,        |
-|                  |            |            |                 |                 |
-|                  |            |            |                 | в биг-бэгах     |
-+------------------+------------+------------+-----------------+-----------------+
++------------------+------------+--------------------+-----------------+--------------------------+
+| Наименование     | Марка      | Состав             | Форма выпуска   | Транспортировка          |
++==================+============+====================+=================+==========================+
+| Prilled urea     | Б          | 46% азота          | приллированный  | навалом                  |
++------------------+------------+--------------------+-----------------+--------------------------+
+| Granular urea    | Б          | 46% азота          | гранулированный | навалом                  |
++------------------+------------+--------------------+-----------------+--------------------------+
+| Ammonium nitrate | Б          | 34% азота          | гранулированная | навалом,                 |
+|                  |            |                    |                 |                          |
+|                  |            |                    |                 | в биг-бэгах              |
++------------------+------------+--------------------+-----------------+--------------------------+
+| MAP              | Б          | 12% N 52% P~2~O~5~ | гранулированная | навалом, в биг-бэгах     |
++------------------+------------+--------------------+-----------------+--------------------------+
+| DAP              | Б          | 12% N 52% P~2~O~5~ | гранулированная | навалом, в биг-бэгах     |
++------------------+------------+--------------------+-----------------+--------------------------+
 
 #### Базис
 
@@ -47,7 +51,7 @@ fig-format: svg
 
 Долл./тонн
 
-Руб./тонн (с учётом НДС).
+Руб./тонн (без учёта НДС)
 
 #### Сроки проведения опроса
 
