--- a/methodology/specs-logistics.qmd
+++ b/methodology/specs-logistics.qmd
@@ -8,7 +8,7 @@ fig-format: svg
 
 ![](../images/railways-icon.svg)
 
-### Ставка аренды: типовой полувагон
+### Ставка аренды: полувагон
 
 Ставка аренды – стоимость передачи арендодателем/собственником грузовых вагонов во временное пользование арендатору/оператору для организации перевозки.
 
@@ -17,9 +17,9 @@ fig-format: svg
 +-----------------------+---------------------------------------------------------------------------------------------------------------------------+
 | Параметры             | Условия                                                                                                                   |
 +=======================+===========================================================================================================================+
-| Вид вагона            | Типовой полувагон,                                                                                                        |
+| Вид вагона            | Типовой полувагон                                                                                                         |
 |                       |                                                                                                                           |
-|                       | инновационный полувагон (если применимо)                                                                                  |
+|                       | Инновационный полувагон (если применимо)                                                                                  |
 +-----------------------+---------------------------------------------------------------------------------------------------------------------------+
 | Срочность             | Краткосрочная аренда (1-3 месяца)                                                                                         |
 |                       |                                                                                                                           |
@@ -34,11 +34,11 @@ fig-format: svg
 | Вторая сторона сделки | Надежный контрагент, кредитоспособность которого не подвергается сомнению                                                 |
 +-----------------------+---------------------------------------------------------------------------------------------------------------------------+
 
-: Валюта и единица измерения: руб./вагон-сут. без НДС.
+Валюта и единица измерения: руб./вагон-сут. без НДС.
 
 Сроки проведения опроса: ежемесячно, в 3-ю неделю отчетного месяца.
 
-### Ставка предоставления: типовой полувагон
+### Ставка предоставления: полувагон
 
 Ставка предоставления – стоимость предоставления и организации оператором/перевозчиком вагонов грузоотправителю под транспортировку груза, с учетом подсыла вагона и оплаты порожнего пробега.
 
@@ -47,7 +47,7 @@ fig-format: svg
 +--------------------------+------------------------------------------------------------------------------------------------------------------------------------------------+
 | Параметры                | Условия                                                                                                                                        |
 +==========================+================================================================================================================================================+
-| Вид вагона для перевозки | Типовой полувагон                                                                                                                              |
+| Вид вагона               | Типовой полувагон                                                                                                                              |
 |                          |                                                                                                                                                |
 |                          | Инновационный вагон                                                                                                                            |
 +--------------------------+------------------------------------------------------------------------------------------------------------------------------------------------+
@@ -86,9 +86,11 @@ fig-format: svg
 
 Общая стоимость железнодорожной перевозки для грузоотправителя складывается из тарифа РЖД за груженый пробег вагона, а также ставки предоставления вагона оператором (доход или ставка оператора в сумме с оплатой порожнего пробега вагона по тарифам РЖД).
 
-Средняя расчетная доходность оперирования вагоном оценивается по следующей формуле: Доходность оператора = (Ставка предоставления вагона - Порожний пробег) / Оборот вагона в сутках,
+Средняя расчетная доходность оперирования вагоном оценивается по следующей формуле: Доходность оператора = (Ставка предоставления вагона - Порожний пробег) / Оборот вагона в сутках, где «оборот вагона» - означает время, затрачиваемое на выполнение цикла операций от момента окончания одной погрузки до момента окончания следующей погрузки или сдачи вагона в груженом или порожнем состоянии.
 
-где «оборот вагона» - означает время, затрачиваемое на выполнение цикла операций от момента окончания одной погрузки до момента окончания следующей погрузки или сдачи вагона в груженом или порожнем состоянии.
+Порожний пробег вагона принимается за 100% к величине гружёного рейса (возврат порожнего вагона после выгрузки осуществляется на станцию отправления).
+
+Плата за порожний пробег вагона рассчитывается при помощи программного обеспечения «Rail-Тариф» согласно Прейскуранту №10-01 «Тарифы на перевозки грузов, и услуги инфраструктуры, выполняемые российскими железными дорогами» (Тарифное руководство №1).
 
 Типовые направления перевозок
 
@@ -100,9 +102,9 @@ fig-format: svg
 -   Кузбасс - Тамань;
 -   прочие направления перевозок грузов, которые отражают рыночные условия и расширяют базу ответов респондентов.
 
-Валюта и единица измерения: Руб./сутки за вагон.
+Валюта и единица измерения: руб./сутки за вагон.
 
-Сроки проведения опроса: Ежемесячно, в 3-ю неделю отчетного месяца.
+Сроки проведения опроса: ежемесячно, в 3-ю неделю отчетного месяца.
 
 ### Ставка аренды: фитинговая платформа
 
@@ -121,7 +123,7 @@ fig-format: svg
 +-----------------------+--------------------------------------------------------------------------------------------------------------------------+
 | Срочность             | Долгосрочная аренда (1 года)                                                                                             |
 +-----------------------+--------------------------------------------------------------------------------------------------------------------------+
-| Партия                | Не менее 100 вагонов                                                                                                     |
+| Партия                | Не менее 50 вагонов                                                                                                      |
 +-----------------------+--------------------------------------------------------------------------------------------------------------------------+
 | Условия эксплуатации  | Текущий (отцепочный) ремонт выполняет за счет арендатора; плановый (деповской, капитальный) ремонт – за счет арендодател |
 +-----------------------+--------------------------------------------------------------------------------------------------------------------------+
@@ -130,7 +132,7 @@ fig-format: svg
 | Вторая сторона сделки | Надежный контрагент, кредитоспособность которого не подвергается сомнению                                                |
 +-----------------------+--------------------------------------------------------------------------------------------------------------------------+
 
-: Валюта и единица измерения: Руб./вагон-сут. без НДС.
+: Валюта и единица измерения: руб./вагон-сут. без НДС.
 
 Сроки проведения опроса: ежемесячно, в 1-ю неделю отчетного месяца.
 
@@ -191,11 +193,13 @@ fig-format: svg
 -   Москва – Новосибирск;
 -   Москва – Красноярск;
 -   Москва – Владивосток;
--   Владивосток – Москва;
+-   Москва – Иркутск;
 -   станции Китая – сухопутные пограничные переходы – Москва;
 -   прочие внутренние, импортные, экспортные и транзитные направления перевозок грузов в контейнерах железнодорожным транспортом, которые отражают рыночные условия и расширяют базу ответов респондентов.
 
-Валюта и единица измерения: тыс. руб. c учётом НДС 20% (внутренние перевозки), долл. США (международные перевозки). Сроки проведения опроса: ежемесячно, в 1-ю неделю отчетного месяца
+Валюта и единица измерения: тыс. руб. c учётом НДС 20% (внутренние перевозки), долл. США (международные перевозки). 
+
+Сроки проведения опроса: ежемесячно, в 1-ю неделю отчетного месяца.
 
 Ставка на перевозку грузов в контейнерах в мультимодальном сообщении – стоимость транспортно-экспедиционных услуг при организации международной перевозки грузов в контейнерах морским и железнодорожным транспортом.
 
@@ -253,7 +257,8 @@ fig-format: svg
 +---------------------------------------+-----------------------------------------------------------------------------------------------------------------+
 | Параметры                             | Условия                                                                                                         |
 +=======================================+=================================================================================================================+
-| Вид контейнера                        | 40-футовый стандартный или увеличенный по высоте контейнер (40HQ, 40HC)                                         |
+| Вид контейнера                        | 40-футовый стандартный или увеличенный по высоте контейнер (40HQ, 40HC)                                         |    
+|                                       | Контейнер CW (Cargo Worthy) – пригодный для транспортировки грузов                                              |
 +---------------------------------------+-----------------------------------------------------------------------------------------------------------------+
 | Период пользования                    | До 60 суток с даты забора порожнего контейнера                                                                  |
 +---------------------------------------+-----------------------------------------------------------------------------------------------------------------+
@@ -269,3 +274,18 @@ fig-format: svg
 +---------------------------------------+-----------------------------------------------------------------------------------------------------------------+
 | Вторая сторона сделки                 | Надежный контрагент, кредитоспособность которого не подвергается сомнению                                       |
 +---------------------------------------+-----------------------------------------------------------------------------------------------------------------+
+
+Типовые локации выдачи и сдачи контейнеров 
+
+Ставки предоставления контейнеров оцениваются в следующих локациях:
+
+-   Москва (локация сдачи – основные порты Китая);
+-   Санкт-Петербург (локация сдачи – основные порты Китая);
+-   Новосибирск (локация сдачи – основные порты Китая);
+-   Екатеринбург (локация сдачи – основные порты Китая);
+-   Основные порты Китая (локация сдачи – Москва);
+-   прочие локации выдачи и сдачи контейнеров, которые отражают рыночные условия и расширяют базу ответов респондентов.
+
+Валюта и единица измерения: тыс. руб. с учётом НДС 20% (предоставление контейнера для внутренних перевозок), долл. США (предоставление контейнера для международных перевозок).
+
+Сроки проведения опроса: ежемесячно, в 1-ю неделю отчетного месяца.
